# sns_pyio

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: doc.yml  release.yml  test.yml
docs/: Makefile  conf.py
src/: __init__.py
src/sns_pyio/: __init__.py  boto3_client.py  options.py  snsio.py
tests/: test_sns_put_batch.py  test_sns_pyio.py
